# ivory_cpp

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  basic_client.cc
include/: activity_vocabulary.hh
